--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,12 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -81,9 +84,13 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -133,5 +140,10 @@
       }
     }
   },
-  "defaultProject": "voila"
+  "defaultProject": "voila",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
