--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@types/chart.js": "^2.9.15",
+    "angular-bootstrap-md": "^8.10.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "loader-runner": "^3.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
