--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/voila",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -23,16 +24,27 @@
               "src/assets"
             ],
             "styles": [
-             
+              "./node_modules/ngx-toastr/toastr.css",
+              "./node_modules/font-awesome/scss/font-awesome.scss",
+              "./node_modules/animate.css/animate.css",
+              "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+              "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "./node_modules/mdbootstrap/css/bootstrap.min.css",
+              "./node_modules/mdbootstrap/css/mdb.min.css",
+              "./node_modules/mdbootstrap/css/style.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
-
+              "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/mdbootstrap/js/jquery.js",
-         
               "./node_modules/mdbootstrap/js/bootstrap.js",
-              "./node_modules/mdbootstrap/js/mdb.js"
+              "./node_modules/mdbootstrap/js/mdb.js",
+              "./node_modules/mdbootstrap/js/popper.min.js",
+              "./node_modules/chart.js/dist/Chart.js",
+              "./node_modules/hammerjs/hammer.min.js",
+              // "./node_modules/ngx-owl-carousel-o/__ivy_ngcc__/fesm2015/ngx-owl-carousel-o.js"
+
             ],
             "es5BrowserSupport": true
           },
@@ -58,6 +70,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
@@ -88,14 +104,29 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/ngx-toastr/toastr.css",
+              "./node_modules/font-awesome/scss/font-awesome.scss",
+              "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+              "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "./node_modules/animate.css/animate.css",
+              "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+              "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "./node_modules/mdbootstrap/css/bootstrap.min.css",
+              "./node_modules/mdbootstrap/css/mdb.min.css",
+              "./node_modules/mdbootstrap/css/style.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/mdbootstrap/js/jquery.js",
-         
               "./node_modules/mdbootstrap/js/bootstrap.js",
-              "./node_modules/mdbootstrap/js/mdb.js"
+              "./node_modules/mdbootstrap/js/mdb.js",
+              "./node_modules/mdbootstrap/js/popper.min.js",
+              "./node_modules/chart.js/dist/Chart.js",
+              "./node_modules/hammerjs/hammer.min.js",
+              // "./node_modules/ngx-owl-carousel-o/__ivy_ngcc__/fesm2015/ngx-owl-carousel-o.js"
+
             ],
             "assets": [
               "src/favicon.ico",
@@ -149,7 +180,10 @@
   "defaultProject": "voila",
   "schematics": {
     "@schematics/angular:component": {
-      "styleext": "scss"
+      "style": "scss"
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
