--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,13 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              // "./node_modules/datatables.net/js/jquery.dataTables.js",
+              // "./node_modules/jszip/dist/jszip.js",
+              // "./node_modules/datatables.net-buttons/js/dataTables.buttons.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.colVis.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.flash.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.html5.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.print.js",
               "./node_modules/mdbootstrap/js/jquery.js",
               "./node_modules/mdbootstrap/js/bootstrap.js",
               "./node_modules/mdbootstrap/js/mdb.js",
@@ -119,6 +126,13 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              // "./node_modules/datatables.net/js/jquery.dataTables.js",
+              // "./node_modules/jszip/dist/jszip.js",
+              // "./node_modules/datatables.net-buttons/js/dataTables.buttons.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.colVis.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.flash.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.html5.js",
+              // "./node_modules/datatables.net-buttons/js/buttons.print.js",
               "./node_modules/mdbootstrap/js/jquery.js",
               "./node_modules/mdbootstrap/js/bootstrap.js",
               "./node_modules/mdbootstrap/js/mdb.js",
