--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^8.0.1",
     "@angular/core": "^8.0.1",
     "@angular/forms": "^8.0.1",
+    "@angular/material": "^9.1.1",
     "@angular/platform-browser": "^8.0.1",
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/router": "^8.0.1",
@@ -24,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@types/chart.js": "^2.9.15",
     "angular-bootstrap-md": "^8.10.1",
+    "angular-datatables": "^8.0.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.5.0",
