--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/router": "^8.0.1",
     "@fortawesome/fontawesome-free": "^5.12.1",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.0",
     "@types/chart.js": "^2.9.15",
     "angular-bootstrap-md": "^8.10.1",
     "angular-datatables": "^8.0.0",
@@ -35,6 +35,7 @@
     "jquery": "^3.4.1",
     "loader-runner": "^3.1.0",
     "mdbootstrap": "^4.14.0",
+    "mydatepicker": "^2.6.9",
     "ng2-archwizard": "^2.1.0",
     "ngx-owl-carousel-o": "^2.0.2",
     "ngx-toastr": "^11.2.0",
