--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "./node_modules/ngx-toastr/toastr.css",
-              "./node_modules/font-awesome/scss/font-awesome.scss",
+              // "./node_modules/font-awesome/scss/font-awesome.scss",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "./node_modules/animate.css/animate.css",
               "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
