--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,10 @@
                             "./node_modules/animate.css/animate.css",
                             "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-                            "./node_modules/mdbootstrap/css/bootstrap.min.css",
-                            "./node_modules/mdbootstrap/css/mdb.min.css",
-                            "./node_modules/mdbootstrap/css/style.css",
-                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            // "./node_modules/mdbootstrap/css/bootstrap.min.css",
+                            // "./node_modules/mdbootstrap/css/mdb.min.css",
+                            // "./node_modules/mdbootstrap/css/style.css",
+                            // "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
@@ -117,10 +117,10 @@
                             "./node_modules/animate.css/animate.css",
                             "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-                            "./node_modules/mdbootstrap/css/bootstrap.min.css",
-                            "./node_modules/mdbootstrap/css/mdb.min.css",
-                            "./node_modules/mdbootstrap/css/style.css",
-                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            // "./node_modules/mdbootstrap/css/bootstrap.min.css",
+                            // "./node_modules/mdbootstrap/css/mdb.min.css",
+                            // "./node_modules/mdbootstrap/css/style.css",
+                            // "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
