--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.5.0",
     "core-js": "^3.6.4",
+    "country-state-city": "^1.0.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
