--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "mdbootstrap": "^4.14.0",
     "mydatepicker": "^2.6.10",
     "ng2-archwizard": "^2.1.0",
+    "ngx-auto-scroll": "^1.1.0",
     "ngx-owl-carousel-o": "^2.0.2",
     "ngx-toastr": "^11.2.0",
     "npm-registry-client": "^8.6.0",
     "rxjs": "~6.5.4",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
