--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    // "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod",
+    "postinstall": "ng build --aot -prod"
+  },
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.4.1"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.1",
+    "@angular/cli": "^8.0.1",
+    "@angular/compiler-cli": "^8.0.1",
     "@angular/cdk": "^9.1.1",
     "@angular/common": "^8.0.1",
     "@angular/compiler": "^8.0.1",
@@ -46,7 +55,8 @@
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "^3.4.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.800.1",
