--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    // "start": "ng serve",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --output-path angularapp --aot -prod"
   },
   "engines": {
     "node": "10.15.0",
@@ -19,9 +18,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.1",
-    "@angular/cli": "^8.0.1",
-    "@angular/compiler-cli": "^8.0.1",
     "@angular/cdk": "^9.1.1",
+    "@angular/cli": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.2",
     "@angular/common": "^8.0.1",
     "@angular/compiler": "^8.0.1",
     "@angular/core": "^8.0.1",
@@ -60,8 +59,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.800.1",
-    "@angular/cli": "^8.0.1",
-    "@angular/compiler-cli": "^8.0.1",
+    "@angular/cli": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.2",
     "@angular/language-service": "^8.0.1",
     "@types/jasmine": "~3.5.8",
     "@types/jasminewd2": "~2.0.3",
