--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@ng-bootstrap/ng-bootstrap": "^5.2.0",
     "@types/chart.js": "^2.9.15",
+    "angular-archwizard": "^6.1.0",
     "angular-bootstrap-md": "^8.10.1",
     "angular-datatables": "^8.0.0",
     "animate.css": "^3.7.2",
@@ -34,7 +35,7 @@
     "country-state-city": "^1.0.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "loader-runner": "^3.1.0",
     "mdbootstrap": "^4.14.0",
     "mydatepicker": "^2.6.10",
@@ -43,6 +44,8 @@
     "ngx-owl-carousel-o": "^2.0.2",
     "ngx-toastr": "^11.2.0",
     "npm-registry-client": "^8.6.0",
+    "primeicons": "^4.0.0",
+    "primeng": "^9.1.0",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
@@ -55,6 +58,7 @@
     "@angular/language-service": "^8.0.1",
     "@types/jasmine": "~3.5.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
