--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "primeicons": "^4.0.0",
     "primeng": "^9.1.0",
     "rxjs": "~6.5.4",
+    "sal.js": "^0.7.6",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "typescript": "^3.4.4"
+    "typescript": "^3.4.4",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.800.1",
