--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular-archwizard": "^6.1.0",
     "angular-bootstrap-md": "^8.10.1",
     "angular-datatables": "^8.0.0",
+    "angular-mydatepicker": "^0.9.12",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.5.0",
@@ -43,6 +44,7 @@
     "jquery": "^3.5.1",
     "loader-runner": "^3.1.0",
     "mdbootstrap": "^4.14.0",
+    "moment": "^2.27.0",
     "mydatepicker": "^2.6.10",
     "ng2-archwizard": "^2.1.0",
     "ngx-auto-scroll": "^1.1.0",
