--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular-bootstrap-md": "^8.10.1",
     "angular-datatables": "^8.0.0",
     "angular-mydatepicker": "^0.9.12",
+    "angular-star-rating": "^3.0.8",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.5.0",
@@ -46,6 +47,7 @@
     "mdbootstrap": "^4.14.0",
     "moment": "^2.27.0",
     "mydatepicker": "^2.6.10",
+    "ng-starrating": "^1.0.20",
     "ng2-archwizard": "^2.1.0",
     "ng5-slider": "^1.2.4",
     "ngx-auto-scroll": "^1.1.0",
