--- a/angular.json
+++ b/angular.json
@@ -60,14 +60,14 @@
                             "vendorChunk": false,
                             "buildOptimizer": true,
                             "budgets": [{
-                                    "type": "initial",
-                                    "maximumWarning": "2mb",
-                                    "maximumError": "5mb"
-                                },
-                                {
-                                    "type": "anyComponentStyle",
-                                    "maximumWarning": "6kb"
+                                    "type": "initial"
+                                    // "maximumWarning": "2mb",
+                                    // "maximumError": "5mb"
                                 }
+                                // {
+                                //     "type": "anyComponentStyle",
+                                //     "maximumWarning": "6kb"
+                                // }
                             ]
                         }
                     }
