--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rxjs": "~6.5.4",
     "sal.js": "^0.7.6",
     "socket.io-client": "^2.3.0",
+    "sweetalert2": "^9.17.1",
     "tslib": "^1.10.0",
     "typescript": "^3.4.4",
     "zone.js": "~0.10.2"
