major color changes

--- a/angular.json
+++ b/angular.json
@@ -34,10 +34,10 @@
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.min.js",
-                            // "./node_modules/mdbootstrap/js/jquery.js",
-                            // "./node_modules/mdbootstrap/js/bootstrap.js",
-                            // "./node_modules/mdbootstrap/js/mdb.js",
-                            // "./node_modules/mdbootstrap/js/popper.min.js",
+                            "./node_modules/mdbootstrap/js/jquery.js",
+                            "./node_modules/mdbootstrap/js/bootstrap.js",
+                            "./node_modules/mdbootstrap/js/mdb.js",
+                            "./node_modules/mdbootstrap/js/popper.min.js",
                             // "./node_modules/chart.js/dist/Chart.js",
                             // "./node_modules/hammerjs/hammer.min.js",
                             "./node_modules/jquery/dist/jquery.min.js"
@@ -105,10 +105,10 @@
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.min.js",
-                            // "./node_modules/mdbootstrap/js/jquery.js",
-                            // "./node_modules/mdbootstrap/js/bootstrap.js",
-                            // "./node_modules/mdbootstrap/js/mdb.js",
-                            // "./node_modules/mdbootstrap/js/popper.min.js",
+                            "./node_modules/mdbootstrap/js/jquery.js",
+                            "./node_modules/mdbootstrap/js/bootstrap.js",
+                            "./node_modules/mdbootstrap/js/mdb.js",
+                            "./node_modules/mdbootstrap/js/popper.min.js",
                             // "./node_modules/chart.js/dist/Chart.js",
                             // "./node_modules/hammerjs/hammer.min.js"
                         ],
