--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "loader-runner": "^3.1.0",
+    "mdbootstrap": "^4.14.0",
     "moment": "^2.27.0",
     "ng2-archwizard": "^2.1.0",
     "ng5-slider": "^1.2.4",
