--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "leaflet-map": "^0.2.1",
     "loader-runner": "^3.1.0",
     "mdbootstrap": "^4.14.0",
     "moment": "^2.27.0",
