--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,8 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
     "outDir": "../out-tsc/app",
-    "types": []
+    "types": [],
+   
   },
   "files": [
     "main.ts",
